fix(css): Dateboxes alignes again

--- a/src/components/ui/DataEntryBox/DataEntryBox.css
+++ b/src/components/ui/DataEntryBox/DataEntryBox.css
@@ -50,7 +50,7 @@
     align-self: center;
     text-align: center;
     margin: 0 1.7rem 0 1rem;
-    min-width: var(--DATEBOX-DUE-MIN-WIDTH);
+    min-width: var(--DATEBOX-CHIP-MIN-WIDTH);
 }
 
 .datebox-mobile {
